# scrapy-chanmam

./: README.md  main.py
ctamap_spider/: .gitignore  pyproject.toml
ctamap_spider/config/: config.py  cookie.txt  dataStructre.json  header.txt  regionCode.json  requestHeader.txt
ctamap_spider/exeption/: Exception.py
ctamap_spider/login/: html.html  log.py
ctamap_spider/other/: api-snippet.py  get_cookies.py  javascriptFirefox.js  zone(1).geojson
ctamap_spider/scrapyData/: scrapy.py
ctamap_spider/scrapyData/crossroadscure/: generateParameters.py  scrapy.py
